--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -1,28 +1,21 @@
 ---
-import { getEntry } from "astro:content";
 import { HeroAccordion } from "./hero/HeroAccordion";
-import type { CollectionEntry } from "astro:content";
 
-// @ts-ignore - Will be resolved after build regenerates types
-const entry = (await getEntry(
-  "hero",
-  "hero",
-)) as CollectionEntry<"hero"> | null;
-
-// @ts-ignore - Will be resolved after build regenerates types
-if (!entry || !entry.data) {
-  console.warn("Hero data missing");
-  return null;
+interface Props {
+  data: {
+    cards: any[];
+  };
 }
 
-// @ts-ignore - Will be resolved after build regenerates types
-const { cards = [] } = entry.data;
+const { data } = Astro.props;
+const { cards = [] } = data;
 ---
 
 <section
   class="w-full bg-white relative pb-12 overflow-hidden z-30 mx-6 sm:mx-0"
+  data-sb-object-id="src/content/pages/homepage.json"
 >
-  <div class="mx-autoh-full">
+  <div class="mx-auto h-full">
     <HeroAccordion client:load cards={cards} />
   </div>
 </section>
