--- a/src/components/home/AboutBio.astro
+++ b/src/components/home/AboutBio.astro
@@ -59,9 +59,9 @@ const contentItems = [
               />
             </div>
           ) : (
-            <div 
-              class="text-sm font-book text-brand-dark leading-relaxed reveal-text" 
-              data-delay={`${(index + 1) * 100}`} 
+            <div
+              class="text-sm font-book text-brand-dark leading-relaxed reveal-text [&>p:not(:last-child)]:mb-4"
+              data-delay={`${(index + 1) * 100}`}
               set:html={item.html}
               data-sb-field-path={item.field}
             />
@@ -72,9 +72,9 @@ const contentItems = [
       <!-- 2-column layout (text + text only) -->
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 items-start">
         {contentItems.map((item, index) => (
-          <div 
-            class="text-sm font-book text-brand-dark leading-relaxed reveal-text" 
-            data-delay={`${(index + 1) * 100}`} 
+          <div
+            class="text-sm font-book text-brand-dark leading-relaxed reveal-text [&>p:not(:last-child)]:mb-8"
+            data-delay={`${(index + 1) * 100}`}
             set:html={item.html}
             data-sb-field-path={item.field}
           />
