--- a/src/components/home/LogoSlider.astro
+++ b/src/components/home/LogoSlider.astro
@@ -32,7 +32,7 @@ const reactLogos = data.logos.map((item: any) => ({
   data-sb-object-id="src/content/pages/homepage.json"
 >
   <MotionLayoutWrapper>
-    <div class="container mx-auto px-6 z-1 relative bg-white">
+    <div class="container z-1 relative bg-white">
       <LogoCarousel client:visible logos={reactLogos} />
     </div>
   </MotionLayoutWrapper>
