--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -87,7 +87,7 @@ const footerLinks = [
       Poptávka
     </Button>
   </div>
-  <div class="container mx-auto px-10 pt-22.5">
+  <div class="container pt-22.5">
     <!-- ROW 1: Logo on the left -->
     <div class="flex justify-start">
       <a href="/#" class="shrink-0 group" aria-label="Domů">
