--- a/src/components/home/AboutUs.astro
+++ b/src/components/home/AboutUs.astro
@@ -26,7 +26,7 @@ if (!data) {
   class="bg-white rounded-[60px] relative overflow-hidden"
   data-sb-object-id="src/content/pages/homepage.json"
 >
-  <div class="container mx-auto px-6 pb-24">
+  <div class="container pb-24">
     <!-- Row 1: Benefits -->
     <BenefitsRow benefits={data.benefits} />
 
