--- a/src/components/home/ContactsSection.astro
+++ b/src/components/home/ContactsSection.astro
@@ -19,7 +19,7 @@ const introHtml = mdToHtml(data.introText);
   class="bg-white py-24"
   data-sb-object-id="src/content/pages/homepage.json"
 >
-  <div class="container mx-auto px-6">
+  <div class="container">
     <div
       class="text-center mb-24 space-y-6 max-w-[980px] mx-auto reveal-text"
       data-delay="0"
