--- a/src/components/home/Prefooter.astro
+++ b/src/components/home/Prefooter.astro
@@ -24,7 +24,7 @@ const remainderHtml = mdToHtml(remainder);
   class="bg-white pt-24 relative overflow-hidden"
   data-sb-object-id="src/content/pages/homepage.json"
 >
-  <div class="container mx-auto px-6 relative">
+  <div class="container relative">
     {
       data.image && (
         <div class="hidden lg:block absolute left-0 bottom-0 z-0 w-[40%] max-w-[600px] reveal-img" data-delay="0">
