--- a/src/components/home/ServiceCard.astro
+++ b/src/components/home/ServiceCard.astro
@@ -26,7 +26,7 @@ const html = mdToHtml(item.description);
       <img
         src={item.image.src}
         alt={item.title}
-        class="w-full h-full rounded-[60px] max-h-[500px]"
+        class="w-full h-full rounded-[60px] max-h-[500px] object-cover"
         data-sb-field-path=".image"
       />
     ) : (
