--- a/src/components/home/AboutBio.astro
+++ b/src/components/home/AboutBio.astro
@@ -51,11 +51,11 @@ const contentItems = [
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 items-start">
         {contentItems.map((item, index) => (
           item.type === 'image' ? (
-            <div class="relative flex items-end h-full reveal-img" data-delay="300" data-sb-field-path={item.field}>
+            <div class="relative flex items-end h-full mt-8 lg:mt-0 reveal-img" data-delay="300" data-sb-field-path={item.field}>
               <img
                 src={item.src}
                 alt={item.alt}
-                class="w-full h-auto object-contain -mb-24 lg:-mb-32 scale-110 origin-bottom"
+                class="w-full h-auto max-h-[400px] object-contain -mb-24 lg:-mb-32 scale-110 origin-bottom"
               />
             </div>
           ) : (
