--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,7 +42,7 @@ const {
     <Header client:load />
 
     <!-- Main Content -->
-    <main class="pt-36">
+    <main class="pt-24 md:pt-36">
       <slot />
     </main>
 
